--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp-css-target",
+  "name": "gulp-critical-css",
   "version": "0.1.0",
   "description": "Gulp helpers for Toolkit (http://github.com/team-sass/toolkit)",
   "main": "index.js",
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Snugug/gulp-css-target.git"
+    "url": "https://github.com/venelinn/gulp-critical-css.git"
   },
   "keywords": [
     "gulp",
@@ -26,9 +26,9 @@
   "author": "Sam Richard",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Snugug/gulp-css-target/issues"
+    "url": "https://github.com/venelinn/gulp-critical-css/issues"
   },
-  "homepage": "https://github.com/Snugug/gulp-css-target",
+  "homepage": "https://github.com/venelinn/gulp-critical-css",
   "dependencies": {
     "chalk": "^0.4.0",
     "fs-extra": "^0.9.1",
@@ -37,6 +37,6 @@
     "underscore.string": "^2.3.3"
   },
   "devDependencies": {
-    "gulp": "^3.8.0"
+    "gulp": "^3.9.1"
   }
 }
